--- a/angularProj/chatboard/package.json
+++ b/angularProj/chatboard/package.json
@@ -24,10 +24,11 @@
     "core-js": "^2.4.1",
     "firebase": "^4.12.1",
     "rxjs": "^5.5.6",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
